# purple-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
brain/: server.py
cli/: __init__.py  dashboard.py  purple.py  tracker.py
config/: Modelfile  mcp.example.json
docs/: server.py
eval/: canary.py  delta_test.py  run_qwen35_122b.sh  v4-sovereign-tests.md  v4_runner.py  v5_runner.py  v6_runner.py  v6_tests.py
hooks/: pre-compact.sh  scan-secrets.sh  session-end.sh
identity/: identity.example.md
knowledge/: server.py
memory/: server.py
scripts/: build_dataset_v2.py  build_dataset_v3.py  pull_datasets.py  setup_training.sh  sync_to_purpleroom.sh  train_config.yaml  vega_abliterate.py  vega_identity_pairs.py  vega_reasoning_pairs.py  vega_sanity.py  vega_serve.py  vega_train.py
search/: docker-compose.yml
search/searxng/: settings.yml
tests/: test_edge_cases.py  test_purple.py
